--- a/src/main/webapp/admin/specimen.xhtml
+++ b/src/main/webapp/admin/specimen.xhtml
@@ -3,6 +3,29 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core">
+    <h:form id="deleteModalForm">
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="Eliminar registro">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">Confirmar eliminación</h4>
+                    </div>
+                    <div class="modal-body">
+                        ¿Está seguro que desea eliminar este registro?
+                    </div>
+                    <div class="modal-footer">
+                        <div class="input-group">
+                            <p:commandButton id="deleteYesButton" value="Eliminar" action="#{specimenBean.delete}" update=":formSpecimen" oncomplete="$('#deleteModal').modal('hide')"/>
+                            <p:commandButton id="deleteNoButton" value="Cancelar" type="button" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </h:form>
     <h:form id="formSpecimen">
         <h:dataTable id="dataTableSpecimen" value="#{specimenBean.allSpecimens}" var="specimen" styleClass="table table-hover table-full-width table-condensed">
             <h:column>
@@ -33,7 +56,7 @@
                 <p:commandLink id="editButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenWizard').show()" update=":formDialog :specimenWizardForm" title="Editar #{specimen.commonName}" actionListener="#{specimenBean.prepareUpdate(specimen)}">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 </p:commandLink>
-                <p:commandLink id="deleteButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenDelete').show()" title="Eliminar #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
+                    <p:commandLink id="deleteButton" class="btn btn-default btn-sm btn-action" oncomplete="$('#deleteModal').modal({backdrop: false})" title="Eliminar #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
                     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                 </p:commandLink>
             </h:column>
@@ -71,7 +94,7 @@
         </h:panelGroup>
         <p:growl id="messages" showDetail="true"/>
     </h:form>
-    
+
     <p:dialog id="detailDialog" widgetVar="specimenDetail" modal="true" dynamic="true" resizable="false" appendTo="@(body)" header="#{specimenBean.taxonomy.taxonomyName} #{specimenBean.specimen.specificEpithet}" closeOnEscape="true" > 
         <h:form id="specimenDetailForm">
             <p:panelGrid id="taxPanelGrid" binding="#{specimenBean.specimenForm}" />
