--- a/src/main/webapp/admin/location.xhtml
+++ b/src/main/webapp/admin/location.xhtml
@@ -3,6 +3,8 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core">
+    <h:outputScript library="primefaces" name="jquery/jquery.js" target="head" />
+    <h:outputScript library="js" name="locationMap.js" target="head"/>
     <h:body>
         <h:form id="formLocation">
             <p:panel id="data">
@@ -10,7 +12,7 @@
                     <h:outputText value="Ubicaciones" />
                 </f:facet>
                 <p:tree id="locTree" value="#{locationBean.root}" var="loc" orientation="vertical" cache="true" selectionMode="single" selection="#{locationBean.selectedNode}" dynamic="true" animate="true">
-                    <p:treeNode expandedIcon="ui-icon-folder-open" collapsedIcon="ui-icon-folder-collapsed">
+                    <p:treeNode expandedIcon="fa fa-folder-open" collapsedIcon="fa fa-folder">
                         <h:outputText value="#{loc}" />
                     </p:treeNode>
                 </p:tree>
@@ -72,4 +74,5 @@
             </h:form>
         </p:confirmDialog>
     </h:body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBR3PcM4cz5r0TULxJuDBgF2xvLqLE73c"></script>
 </ui:composition>
