--- a/src/main/webapp/admin/taxonomy.xhtml
+++ b/src/main/webapp/admin/taxonomy.xhtml
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -7,7 +6,7 @@
     <h:outputStylesheet library="css" name="pstyle.css" />
     <h:body>
         <h:form id="formTaxonomy">
-            <p:tree id="taxTree" value="#{taxonomyBean.taxRoot}" var="tax" orientation="horizontal" cache="false" selectionMode="single" selection="#{taxonomyBean.selectedNode}" dynamic="true" animate="true">
+            <p:tree id="taxTree" value="#{taxonomyBean.taxRoot}" var="tax" orientation="horizontal" cache="false" selectionMode="single" selection="#{taxonomyBean.selectedNode}">
                 <p:treeNode>
                     <h:outputText value="#{tax}" />
                 </p:treeNode>
