--- a/src/main/webapp/admin/specimen.xhtml
+++ b/src/main/webapp/admin/specimen.xhtml
@@ -26,74 +26,82 @@
             </div>
         </div>
     </h:form>
+
     <h:form id="formSpecimen">
-        <h:dataTable id="dataTableSpecimen" value="#{specimenBean.allSpecimens}" var="specimen" styleClass="table table-hover table-full-width table-condensed">
-            <h:column>
-                <f:facet name="header">Nombre Científico</f:facet>
-                <h:outputText value="#{specimen.idTaxonomy.taxonomyName} #{specimen.specificEpithet}" />
-            </h:column>
-            <h:column>
-                <f:facet name="header">Nombre Común</f:facet>
-                <h:outputText value="#{specimen.commonName}" />
-            </h:column>
-            <h:column>
-                <f:facet name="header">Fecha de Determinación</f:facet>
-                <h:outputText value="#{specimenBean.formatDate(specimen.idenDate)}" />
-            </h:column>
-            <h:column>
-                <f:facet name="header">Fecha de Colecta</f:facet>
-                <h:outputText value="#{specimenBean.formatDate(specimen.collectDate)}" />
-            </h:column>
-            <h:column>
-                <f:facet name="header">Tipo de Muestra</f:facet>
-                <h:outputText value="#{specimen.idSaty.satyName}" />
-            </h:column>
-            <h:column>
-                <f:facet name="header">Acciones</f:facet>
-                <p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenDetail').show()" update=":specimenDetailForm" title="Ficha técnica de #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
-                    <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
-                </p:commandLink>
-                <p:commandLink id="editButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenWizard').show()" update=":formDialog :specimenWizardForm" title="Editar #{specimen.commonName}" actionListener="#{specimenBean.prepareUpdate(specimen)}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </p:commandLink>
+        <div class="panel panel-default">
+            <div class="panel-heading">Especímenes</div>
+            <div class="panel-body">
+                <p>Mostrando <b>#{specimenBean.allSpecimens.size()}</b> de <b>#{specimenBean.numberOfResults}</b> registros</p>
+            </div>
+            <h:dataTable id="dataTableSpecimen" value="#{specimenBean.allSpecimens}" var="specimen" styleClass="table table-hover table-condensed">
+                <h:column>
+                    <f:facet name="header">Nombre Científico</f:facet>
+                    <h:outputText value="#{specimen.idTaxonomy.taxonomyName} #{specimen.specificEpithet}" />
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Nombre Común</f:facet>
+                    <h:outputText value="#{specimen.commonName}" />
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Fecha de Determinación</f:facet>
+                    <h:outputText value="#{specimenBean.formatDate(specimen.idenDate)}" />
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Fecha de Colecta</f:facet>
+                    <h:outputText value="#{specimenBean.formatDate(specimen.collectDate)}" />
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Tipo de Muestra</f:facet>
+                    <h:outputText value="#{specimen.idSaty.satyName}" />
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Acciones</f:facet>
+                    <p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenDetail').show()" update=":specimenDetailForm" title="Ficha técnica de #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
+                        <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+                    </p:commandLink>
+                    <p:commandLink id="editButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenWizard').show()" update=":formDialog :specimenWizardForm" title="Editar #{specimen.commonName}" actionListener="#{specimenBean.prepareUpdate(specimen)}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    </p:commandLink>
                     <p:commandLink id="deleteButton" class="btn btn-default btn-sm btn-action" oncomplete="$('#deleteModal').modal({backdrop: false})" title="Eliminar #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                </p:commandLink>
-            </h:column>
-        </h:dataTable>
-        <h:panelGroup id="paginator">
-            <nav aria-label="Page navigation" class="paginador">
-                <ul class="pagination pagination-lg">
-                    <li>
-                        <p:commandLink id="first" title="Primera página" actionListener="#{specimenBean.firstPage()}" update="dataTableSpecimen, paginator">
-                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                        </p:commandLink>
-                    </li>
-                    <li>
-                        <p:commandLink id="prev" title="Anterior página" actionListener="#{specimenBean.previousPage()}" update="dataTableSpecimen, paginator">
-                            <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
-                        </p:commandLink>
-                    </li>
-                    <ui:repeat id="pager" var="i" value="#{specimenBean.pages}">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                    </p:commandLink>
+                </h:column>
+            </h:dataTable>
+            <h:panelGroup id="paginator">
+                <nav aria-label="Page navigation" class="paginador">
+                    <ul class="pagination pagination-lg">
                         <li>
-                            <p:commandLink id="pageNumer" actionListener="#{specimenBean.getPageResults(i)}" class="#{specimenBean.currentPage == i? 'active-page': ''}" update="formSpecimen:paginator, formSpecimen:dataTableSpecimen">#{i}</p:commandLink>
+                            <p:commandLink id="first" title="Primera página" actionListener="#{specimenBean.firstPage()}" update="dataTableSpecimen, paginator">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            </p:commandLink>
                         </li>
-                    </ui:repeat>
-                    <li>
-                        <p:commandLink id="next" title="Siguiente página" actionListener="#{specimenBean.nextPage()}" update="dataTableSpecimen, paginator">
-                            <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-                        </p:commandLink>
-                    </li>
-                    <li>
-                        <p:commandLink id="last" title="Última página" actionListener="#{specimenBean.lastPage()}" update="dataTableSpecimen, paginator">
-                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                        </p:commandLink>
-                    </li>
-                </ul>
-            </nav>
-        </h:panelGroup>
+                        <li>
+                            <p:commandLink id="prev" title="Anterior página" actionListener="#{specimenBean.previousPage()}" update="dataTableSpecimen, paginator">
+                                <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+                            </p:commandLink>
+                        </li>
+                        <ui:repeat id="pager" var="i" value="#{specimenBean.pages}">
+                            <li>
+                                <p:commandLink id="pageNumer" actionListener="#{specimenBean.getPageResults(i)}" class="#{specimenBean.currentPage == i? 'active-page': ''}" update="formSpecimen:paginator, formSpecimen:dataTableSpecimen">#{i}</p:commandLink>
+                            </li>
+                        </ui:repeat>
+                        <li>
+                            <p:commandLink id="next" title="Siguiente página" actionListener="#{specimenBean.nextPage()}" update="dataTableSpecimen, paginator">
+                                <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+                            </p:commandLink>
+                        </li>
+                        <li>
+                            <p:commandLink id="last" title="Última página" actionListener="#{specimenBean.lastPage()}" update="dataTableSpecimen, paginator">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            </p:commandLink>
+                        </li>
+                    </ul>
+                </nav>
+            </h:panelGroup>
+        </div>
         <p:growl id="messages" showDetail="true"/>
     </h:form>
+
 
     <p:dialog id="detailDialog" widgetVar="specimenDetail" modal="true" dynamic="true" resizable="false" appendTo="@(body)" header="#{specimenBean.taxonomy.taxonomyName} #{specimenBean.specimen.specificEpithet}" closeOnEscape="true" > 
         <h:form id="specimenDetailForm">
