--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -107,6 +107,7 @@
             </div>
         </div>
     </h:body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBR3PcM4cz5r0TULxJuDBgF2xvLqLE73c"></script>
     <script src="light-bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="light-bootstrap/js/bootstrap-checkbox-radio-switch.js"></script>
     <script src="light-bootstrap/js/chartist.min.js"></script>
