--- a/src/main/webapp/admin/specimen.xhtml
+++ b/src/main/webapp/admin/specimen.xhtml
@@ -33,39 +33,42 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="form-group">
-                        <label class="col-md-2 control-label" for="nombreComun">Nombre Común:</label>
+                        <label class="col-md-1 control-label" for="nombreComun">Nombre Común:</label>
                         <div class="col-md-2">
-                            <h:inputText id="nombreComun" styleClass="fecha form-control input-block-level required" value="#{specimenBean.specimen.commonName}">
+                            <h:inputText id="nombreComun" styleClass="ui-state-default form-control input-sm input-block-level required" value="#{specimenBean.specimen.commonName}">
                                 <p:ajax process="@this"/>
                                 <f:validateBean disabled="true"/>
                             </h:inputText>
                         </div>
-                        <label class="col-md-2 control-label" for="epiteto">Epiteto Específico:</label>
+                        <label class="col-md-1 control-label" for="epiteto">Epiteto Específico:</label>
                         <div class="col-md-2">
-                            <h:inputText id="epiteto" styleClass="form-control input-block-level required" value="#{specimenBean.specimen.specificEpithet}">
+                            <h:inputText id="epiteto" styleClass="ui-state-default form-control input-sm input-block-level required" value="#{specimenBean.specimen.specificEpithet}">
                                 <p:ajax process="@this"/>
                                 <f:validateBean disabled="true"/>
                             </h:inputText>
                         </div>
-                        <label class="col-md-2 control-label" for="epiteto">ID Registro Biológico:</label>
+                        <label class="col-md-1 control-label" for="epiteto">ID Registro Biológico:</label>
                         <div class="col-md-2">
-                            <h:inputText id="bioreg" styleClass="form-control input-block-level required" value="#{specimenBean.specimen.idBioreg}">
+                            <h:inputText id="bioreg" styleClass="ui-state-default form-control input-sm input-block-level required" value="#{specimenBean.specimen.idBioreg}">
                                 <p:ajax process="@this"/>
                                 <f:validateBean disabled="true"/>
                             </h:inputText>
+                        </div>
+                        <label class="col-md-1 control-label" for="epiteto">Nombre Taxonómico:</label>
+                        <div class="col-md-2">
+                            <p:autoComplete id="dd" dropdown="true" value="#{specimenBean.specimen.idTaxonomy}" completeMethod="#{specimenBean.taxonomysQuery}" var="tax"
+                                            itemLabel="#{tax.taxonomyName}" itemValue="#{tax}" forceSelection="true" converter="TaxonomyConverter">
+                                <p:ajax process="@this"/>
+                            </p:autoComplete>
                         </div>
                     </div>
-                    <p:autoComplete id="dd" dropdown="true" value="#{specimenBean.specimen.idTaxonomy}" completeMethod="#{specimenBean.taxonomysQuery}" var="tax"
-                                    itemLabel="#{tax.taxonomyName}" itemValue="#{tax}" forceSelection="true" converter="TaxonomyConverter">
-                        <p:ajax process="@this"/>
-                    </p:autoComplete>
                 </div>
                 <hr />
                 <h:panelGroup layout="block" rendered="#{specimenBean.allSpecimens != null and !specimenBean.allSpecimens.isEmpty()}" styleClass="pull-right">
                     <p>Mostrando <b>#{specimenBean.allSpecimens.size()}</b> de <b>#{specimenBean.pager.numberOfResults}</b> registros</p>
                 </h:panelGroup>
                 <p:commandButton id="search" actionListener="#{specimenBean.search()}" update="formSpecimen" value="Consultar"/>
-                <p:commandButton id="clear" actionListener="#{specimenBean.search()}" update="formSpecimen" value="Limpiar"/>
+                <p:commandButton id="clear" actionListener="#{specimenBean.limpiarFiltros()}" update="formSpecimen" value="Limpiar"/>
             </div>
             <h:dataTable id="dataTableSpecimen" rendered="#{specimenBean.allSpecimens != null and !specimenBean.allSpecimens.isEmpty()}" value="#{specimenBean.allSpecimens}" var="specimen" styleClass="table table-hover table-condensed">
                 <h:column>
